style(controller-lib): improve the code style (#66)